--- a/4/index.html
+++ b/4/index.html
@@ -13,7 +13,7 @@
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__main-logo">
-      <img src="img/images/logos/sedona-headder.svg" width="185" height="96" alt="Логтип «Sedona».">
+      <img src="images/logos/sedona-headder.svg" width="185" height="96" alt="Логтип «Sedona».">
     </a>
     <nav class="main-nav">
       <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
@@ -26,17 +26,17 @@
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/catalog.html" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="catalog.html" ;>
               Фото и видео
             </a>
           </li>
           <li class="site-list__item">
-            <a href="http://localhost:3000/form.html" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="form.html" ;>
               Форма отзыва
             </a>
           </li>
           <li class="site-list__item">
-            <a href="https://htmlacademy.ru/study" style="text-decoration: none;color: #fff" ;>
+            <a class="site-list__link" href="https://htmlacademy.ru/study" ;>
               Html academy
             </a>
           </li>
@@ -45,9 +45,9 @@
     </nav>
   </header>
   <main class="main-container">
-    <div class="welcome-anthem">
-      <img class="welcome-logo" src="img/images/main-welcome.svg" width="282" height="214" alt="Логотип Welcome.">
-    </div>
+    <section class="welcome-anthem">
+      <img class="welcome-logo" src="images/main-welcome.svg" width="282" height="214" alt="Логотип Welcome.">
+    </section>
     <section class="intro">
       <h1 class="intro__title">Седона-небольшой городок в Аризоне,
         заслуживающий большего!
@@ -61,22 +61,22 @@
           <h3 class="advantages__title">Настоящий городок</h3>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
           <div class="advantages__true-town-photo">
-            <img class="advantages__photo" src="img/images/photos/index-view-1.jpg" width="520px" height="260px"
+            <img class="advantages__photo" src="images/photos/index-view-1.jpg" width="520px" height="260px"
               alt="Фото города.">
           </div>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Жилье</h3>
           <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\food.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Еда</h3>
           <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
         </li>
         <li class="advantages__item">
-          <img class="logo" src="img\images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
+          <img class="logo" src="images\logos\souveniers.svg" width="39" height="37" alt="Логотип дома.">
           <h3 class="advantages__title">Сувениры</h3>
           <p class="advantages__description">Не только китайского, но и местного производства!</p>
         </li>
@@ -84,9 +84,8 @@
           <h3 class="advantages__title">Там есть мост дьявола</h3>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
           <div class="advantages__devils-bridge-photo">
-            <img class="advantages__photo" src="img/images/photos/index-view-2.jpg" width="520px" height="260px"
+            <img class="advantages__photo" src="images/photos/index-view-2.jpg" width="520px" height="260px"
               alt="Фото моста.">
-          </div>
           </div>
         </li>
         <li class="advantages__item advantages__item--greyback">
@@ -107,7 +106,7 @@
       <h2 class="outro__title">Заинтересовались?</h2>
       <p class="outro__description">Укажите преполагаемые даты поездки,
         и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-      <a class="outro__navigation-link" href="https://clck.ru/Vmr3g" style="text-decoration: none;color: #fff" ;> Найти
+      <a class="button" href="https://clck.ru/Vmr3g" ;> Найти
         гостиницу
       </a>
     </section>
