--- a/source/index.html
+++ b/source/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Sedona</title>
   <link rel="stylesheet" type="text/css" href="css/style.css">
   <link rel="stylesheet/less" type="text/css" href="style.less">
@@ -15,8 +16,6 @@
       <img src="images/logos/sedona-headder.svg" width="185" height="96" alt="Логтип «Sedona».">
     </a>
     <nav class="main-nav">
-      <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
-      </button>
       <div class="main-nav__wrapper">
         <ul class="main-nav__list site-list">
           <li class="site-list__item site-list__item--active">
@@ -40,6 +39,8 @@
             </a>
           </li>
         </ul>
+        <button class="main-nav__toggle" type="button"><span class="visually-hidden">Открыть меню</span>
+        </button>
       </div>
     </nav>
   </header>
@@ -59,7 +60,7 @@
         <li class="advantages__item advantages__item--blueback">
           <h3 class="advantages__title">Настоящий городок</h3>
           <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
-          <div class="advantages__true-town-photo">
+          <div class="advantages__advatage-photo">
             <img class="advantages__photo" src="images/photos/index-view-1.jpg" width="520px" height="260px"
               alt="Фото города.">
           </div>
@@ -82,7 +83,7 @@
         <li class="advantages__item advantages__item--blueback">
           <h3 class="advantages__title">Там есть мост дьявола</h3>
           <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
-          <div class="advantages__devils-bridge-photo">
+          <div class="advantages__advantage-photo">
             <img class="advantages__photo" src="images/photos/index-view-2.jpg" width="520px" height="260px"
               alt="Фото моста.">
           </div>
@@ -117,19 +118,19 @@
     <div class="footer__hashtag">
       <span>#visitsedona</span>
     </div>
-    <ul class="social">
-      <li class="social__item">
-        <a class="social__link" href="https://vk.com/htmlacademy">
+    <ul class="footer__social">
+      <li class="footer__item">
+        <a class="footer__link" href="https://vk.com/htmlacademy">
           <span class="visually-hidden">vkontakte.</span>
         </a>
       </li>
-      <li class="social__item">
-        <a class="social__link" href="https://t.me/htmlacademy">
+      <li class="footer__item">
+        <a class="footer__link" href="https://t.me/htmlacademy">
           <span class="visually-hidden">telegram.</span>
         </a>
       </li>
-      <li class="social__item">
-        <a class="social__link" href="https://www.youtube.com/user/htmlacademyru">
+      <li class="footer__item">
+        <a class="footer__link" href="https://www.youtube.com/user/htmlacademyru">
           <span class="visually-hidden">youtube.</span>
         </a>
       </li>
