--- a/source/form.html
+++ b/source/form.html
@@ -9,7 +9,7 @@
   <link rel="stylesheet/less" type="text/css" href="style.less">
   <script src="less.min.js" type="text/javascript"></script>
 </head>
-
+<div class="page__container">
 <body class="page__body">
   <header class="main-header">
     <a class="main-header__main-logo" href="http://localhost:3000/index.html">
@@ -157,5 +157,5 @@
     </div>
   </footer>
 </body>
-
+</div>
 </html>
