--- a/source/form.html
+++ b/source/form.html
@@ -58,31 +58,31 @@
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
       <h3 class="form__title">
         Представьтесь: </h3>
-      <p class="form__group">Имя*:
-      <label class="form__name-data">
-        <input type="text" class="form-input" name="name" placeholder="Пётр">
+      <p class="form__group">
+      <label class="form__name-data">Имя*:
+        <input type="text" class="form__form-input" name="name" placeholder="Пётр">
       </label>
     </p>
-       <p class="form__group">Фамилия*:
-      <label class="form__name-data">
-        <input type="text" class="form-input" name="surname" placeholder="Пустота">
+       <p class="form__group">
+      <label class="form__name-data">Фамилия*:
+        <input type="text" class="form__form-input" name="surname" placeholder="Пустота">
       </label>
     </p>
-      <p class="form__group">Отчество:
-      <label class="form__name-data">
-        <input type="text" class="form-input" name="lastname" placeholder="Викторович">
+      <p class="form__group">
+      <label class="form__name-data">Отчество:
+        <input type="text" class="form__form-input" name="lastname" placeholder="Викторович">
       </label>
       </p>
       <h3 class="form__title">
         Контактная информация: </h3>
-      <p class="form__label">Контактный телефон*:
-      <label class="form__phone">
-        <input type="text" class="form-input" name="phone-number" placeholder="Введите телефон">
+      <p class="form__label">
+      <label class="form__phone">Контактный телефон*:
+        <input type="text" class="form__form-input" name="phone-number" placeholder="Введите телефон">
       </label>
       </p>
-      <p class="form__label">Электронная почта*:
-      <label class="form__email">
-        <input type="text" class="form-input" name="mail" placeholder="Введите e-mail">
+      <p class="form__label">
+      <label class="form__email">Электронная почта*:
+        <input type="text" class="form__form-input" name="mail" placeholder="Введите e-mail">
       </label>
       </p>
       <h3 class="form__title">
