--- a/source/form.html
+++ b/source/form.html
@@ -58,35 +58,41 @@
         достопримечательностях</p>
     </section>
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
+      <div class="form__contacts-container">
+        <div class="form__visitor-container">
       <h3 class="form__title">
         Представьтесь: </h3>
-      <p class="form__group">
-      <label class="form__name-data">Имя*:
+      <p class="form__group">Имя*:
+      <label class="form__name-data">
         <input type="text" class="form__form-input" name="name" placeholder="Пётр">
       </label>
     </p>
-       <p class="form__group">
-      <label class="form__name-data">Фамилия*:
+       <p class="form__group">Фамилия*:
+      <label class="form__name-data">
         <input type="text" class="form__form-input" name="surname" placeholder="Пустота">
       </label>
     </p>
-      <p class="form__group">
-      <label class="form__name-data">Отчество:
+      <p class="form__group">Отчество:
+      <label class="form__name-data">
         <input type="text" class="form__form-input" name="lastname" placeholder="Викторович">
       </label>
       </p>
+    </div>
+    <div class="form__visitor-contacts">
       <h3 class="form__title">
         Контактная информация: </h3>
-      <p class="form__label">
-      <label class="form__phone">Контактный телефон*:
+      <p class="form__label">Контактный телефон*:
+      <label class="form__phone">
         <input type="text" class="form__form-input" name="phone-number" placeholder="Введите телефон">
       </label>
       </p>
-      <p class="form__label">
-      <label class="form__email">Электронная почта*:
+      <p class="form__label">Электронная почта*:
+      <label class="form__email">
         <input type="text" class="form__form-input" name="mail" placeholder="Введите e-mail">
       </label>
       </p>
+    </div>
+    </div>
       <h3 class="form__title">
         Ваше общее впечатление: </h3>
       <ul class="form__filter-list">
@@ -113,24 +119,30 @@
       <fieldset class="form__checkbox">
         <h3 class="form__title">
           Посещённые достопримечательности: </h3>
-        <label class="form__control">
+        <label class="form__control-sights">
+          <div class="form__sights-container-left">
           <input class="form__control-input" type="checkbox" name="bridge" checked>
           Мост Дьявола
           <input class="form__control-input" type="checkbox" name="hill" checked>
           Гора-Колокол
+        </div>
+        <div class="form__sights-container-right">
           <input class="form__control-input" type="checkbox" name="park" checked>
           Слайд-парк
           <input class="form__control-input" type="checkbox" name="rocks">
           Красные скалы
+        </div>
         </label>
       </fieldset>
       <form class="form__text-control" action="https://echo.htmlacademy.ru/" method="get">
         <h3 class="form__title">
           Опишите свои эмоции: </h3>
+          <div class="form__text-area-container">
         <textarea class="form__text-area" placeholder="Опишите подробно все свои восторги">
           </textarea>
-        <button class="button feedback-submit" type="submit" ;>Оставить отзыв </button>
+        <button class="button" type="submit" ;>Отправить отзыв </button>
         <label class="form__label">:-Обязательные поля</label>
+        </div>
       </form>
   </main>
   <footer class="footer">
@@ -140,22 +152,30 @@
     <ul class="footer__social">
       <li class="footer__item">
         <a class="footer__link" href="https://vk.com/htmlacademy">
+          <img class="footer__icon" src="images/logos/vk.svg" width="48px" height="48px"
+          alt="vkontakte.">
           <span class="visually-hidden">vkontakte.</span>
         </a>
       </li>
       <li class="footer__item">
         <a class="footer__link" href="https://t.me/htmlacademy">
+          <img class="footer__icon" src="images/logos/telegram.svg" width="48px" height="48px"
+          alt="telegram.">
           <span class="visually-hidden">telegram.</span>
         </a>
       </li>
       <li class="footer__item">
         <a class="footer__link" href="https://www.youtube.com/user/htmlacademyru">
+          <img class="footer__icon" src="images/logos/youtube.svg" width="48px" height="48px"
+          alt="youtube.">
           <span class="visually-hidden">youtube.</span>
         </a>
       </li>
     </ul>
     <div class="footer__copyright">
       <span class="footer__text">Разработано</span>
+      <img class="footer__icon" src="images/logos/htmlacademy.svg" width="27px" height="33px"
+      alt="htmlacademy.">
     </div>
   </footer>
   <script src="script.js"></script>
