--- a/source/catalog.html
+++ b/source/catalog.html
@@ -83,7 +83,11 @@
                 <p class="catalog-photos__author">Автор фото: Борис</p>
               </div>
               <div class="catalog-photos__like like-button">
-                <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="images/logos/like-desktop.svg" width="23px" height="21px"
+                    alt="likes.">
+                  <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                </picture>
                 <span class="like-button__counter">1350</span>
               </div>
             </div>
@@ -107,7 +111,11 @@
                 <p class="catalog-photos__author">Автор фото: Сергей</p>
               </div>
               <div class="catalog-photos__like like-button">
-                <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="images/logos/like-desktop.svg" width="23px" height="21px"
+                    alt="likes.">
+                  <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                </picture>
                 <span class="like-button__counter">143</span>
               </div>
             </div>
@@ -131,7 +139,11 @@
                 <p class="catalog-photos__author">Автор фото: Петр</p>
               </div>
               <div class="catalog-photos__like-small like-button">
-                <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="images/logos/like-desktop.svg" width="23px" height="21px"
+                    alt="likes.">
+                  <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                </picture>
                 <span class="like-button__counter">96</span>
               </div>
             </div>
@@ -155,7 +167,11 @@
                 <p class="catalog-photos__author">Автор фото: Антон</p>
               </div>
               <div class="catalog-photos__like-small like-button">
-                <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                <picture>
+                  <source media="(min-width: 1200px)" srcset="images/logos/like-desktop.svg" width="23px" height="21px"
+                    alt="likes.">
+                  <img class="like-button__icon" src="images/logos/like.svg" width="23px" height="21px" alt="likes.">
+                </picture>
                 <span class="like-button__counter">254</span>
               </div>
             </div>
