--- a/source/form.html
+++ b/source/form.html
@@ -61,8 +61,8 @@
         достопримечательностях</p>
     </section>
     <form class="form" action="https://echo.htmlacademy.ru/" method="post">
-      <div class="form__group--container">
-      <div class="form__group--small">
+      <div class="form__group-container">
+      <div class="form__group-small">
       <h3 class="form__title">
         Представьтесь: </h3>
       <p class="form__label">Имя*:
@@ -81,7 +81,7 @@
       </label>
       </p>
     </div>
-    <div class="form__group--small">
+    <div class="form__group-small">
       <h3 class="form__title">
         Контактная информация: </h3>
       <p class="form__label">Контактный телефон*:
@@ -127,8 +127,8 @@
       <fieldset class="form__checkbox">
         <h3 class="form__title">
           Посещённые достопримечательности: </h3>
-          <div class="form__group--container-checkbox">
-          <div class="form__group--small-checkbox">
+          <div class="form__group-container-checkbox">
+          <div class="form__group-small-checkbox">
         <label class="form__control-sights">
           <input class="form__control-input" type="checkbox" name="bridge" checked>
           <span class="form__checkbox-fake"></span>
@@ -140,7 +140,7 @@
           <span class="form__checkbox-text">Гора-Колокол</span>
         </label>
           </div>
-          <div class="form__group--small-checkbox">
+          <div class="form__group-small-checkbox">
         <label class="form__control-sights">
           <input class="form__control-input" type="checkbox" name="bridge" checked>
           <span class="form__checkbox-fake"></span>
@@ -154,15 +154,16 @@
       </div>
     </div>
       </fieldset>
-      <form class="form__text-control" action="https://echo.htmlacademy.ru/" method="get">
-        <h3 class="form__title">
-          Опишите свои эмоции: </h3>
           <div class="form__text-area-container">
+            <h3 class="form__title">
+              Опишите свои эмоции: </h3>
         <textarea class="form__text-area" placeholder="Опишите подробно все свои восторги">
           </textarea>
-        <button class="button" type="submit" ;>Отправить отзыв </button>
         </div>
+        <div class="form__feedback">
+        <button class="button" type="submit">Отправить отзыв </button>
         <span class="form__mandatory">:-Обязательные поля</span>
+      </div>
       </form>
   </main>
   <footer class="footer">
