--- a/source/index.html
+++ b/source/index.html
@@ -75,6 +75,8 @@
               <picture>
                 <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop.jpg" width="800" height="260"
                   alt="Фото города.">
+                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet.jpg" width="512" height="260"
+                  alt="Фото города.">
                 <img class="advantages__photo" src="images/photos/index-view-1.jpg" width="520" height="260"
                   alt="Фото города.">
               </picture>
@@ -82,43 +84,39 @@
           </li>
           <div class="advantages__greyback-container">
             <li class="advantages__item">
-              <picture>
-                <source media="(min-width: 768px)" srcset="images\logos\house-tablet.svg" width="79" height="72"
-                  alt="Логотип дома.">
               <img class="logo" src="images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
-              </picture>
               <div class="advantages__item-container">
+                <div class="advantages__description-container">
                 <h3 class="advantages__title">Жилье</h3>
                 <p class="advantages__description">Рекомендуем пожить в настоящем мотеле, все как в кино!</p>
               </div>
+            </div>
             </li>
             <li class="advantages__item">
-              <picture>
-                <source media="(min-width: 768px)" srcset="images\logos\food-tablet.svg" width="79" height="72"
-                  alt="Логотип бургера.">
               <img class="logo" src="images\logos\food.svg" width="39" height="37" alt="Логотип бургера.">
-            </picture>
               <div class="advantages__item-container">
+                <div class="advantages__description-container">
                 <h3 class="advantages__title">Еда</h3>
                 <p class="advantages__description">Всегда заказывайте фирменный бургер, вы не разочаруетесь!</p>
               </div>
+            </div>
             </li>
             <li class="advantages__item">
-              <picture>
-                <source media="(min-width: 768px)" srcset="images\logos\souveniers-tablet.svg" width="79" height="72"
-                  alt="Логотип подарка.">
               <img class="logo" src="images\logos\souveniers.svg" width="39" height="37" alt="Логотип подарка.">
-              </picture>
               <div class="advantages__item-container">
+                <div class="advantages__description-container">
                 <h3 class="advantages__title">Сувениры</h3>
                 <p class="advantages__description">Не только китайского, но и местного производства!</p>
               </div>
+            </div>
             </li>
           </div>
           <li class="advantages__item advantages__item--blueback">
             <div class="advantages__advantage-photo">
               <picture>
                 <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop-2.jpg" width="800" height="260"
+                  alt="Фото моста.">
+                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet-2.jpg" width="512" height="260"
                   alt="Фото моста.">
                 <img class="advantages__photo" src="images/photos/index-view-2.jpg" width="520" height="260"
                   alt="Фото моста.">
@@ -153,7 +151,7 @@
         <h2 class="outro__title">Заинтересовались?</h2>
         <p class="outro__description">Укажите преполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button" href="https://clck.ru/Vmr3g" ;> Найти
+        <a class="button" href="https://clck.ru/Vmr3g"> Найти
           гостиницу
         </a>
       </section>
